--- a/MDK-ARM/Test/Test.build_log.htm
+++ b/MDK-ARM/Test/Test.build_log.htm
@@ -21,13 +21,24 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-D:\Sea Jackal\Bauman Robotics\Test\MDK-ARM\Test.uvprojx
-Project File Date:  03/07/2022
+D:\Sea Jackal\Bauman Robotics\Belt-tension-control_\MDK-ARM\Test.uvprojx
+Project File Date:  04/14/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Program Files\Keil\Core\ARM\ARMCC\Bin'
 Build target 'Test'
-"Test\Test.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Core/Inc/FrequencyCounter.h(21): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Core/Inc/main.h(39): warning:  #1295-D: Deprecated declaration IncrementFirstCounter - give arg types
+  void IncrementFirstCounter();
+../Core/Src/FrequencyCounter.h(14): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Core/Src/main.c: 3 warnings, 0 errors
+linking...
+Program Size: Code=6056 RO-data=292 RW-data=28 ZI-data=1796  
+FromELF: creating hex file...
+"Test\Test.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -51,7 +62,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
